# NOAA_Weather_Forecast

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  handler.py  pyproject.toml  requirements.txt  todo.md
.github/workflows/: bot-poll.yml  verify-actuals.yml  weather-jobs.yml
app/: __init__.py  config.py  main.py  metrics.py  timeutil.py
app/bot/: __init__.py  charts.py  formatting.py  handlers.py  live.py  middleware.py
app/db/: __init__.py  daily_errors.py  historical.py  repo.py  schema.sql  sqlite_repo.py  ydb_repo.py
app/jobs/: __init__.py  fetch_forecasts.py  scheduler.py  verify.py
app/sources/: __init__.py  cli_report.py  mav.py  met.py  nbm.py  nws.py  polymarket.py
data/: la_weather.db
la_weather_forecast.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: backfill.py  backfill_daily_errors.py  backfill_historical_metrics.py  build_zip.py  deploy.ps1  init_ydb.py  migrate_to_ydb.py  run_job.py  set_webhook.py
tests/: test_charts.py  test_daily_errors.py  test_formatting.py  test_handlers.py  test_historical_archive.py  test_jobs.py  test_live.py  test_metrics.py  test_middleware.py  test_parsers.py  test_polymarket.py  test_repo.py  test_sources.py  test_timeutil.py
tests/fixtures/: .gitkeep  cli_lax.json  mav_klax.txt  met_klax.txt  metar_klax.json  nbs_klax.txt  polymarket_la.json
